--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -16,7 +16,7 @@
     padding-bottom: 84.5px;
     margin: auto;
     max-width: 1440px;
-    .wrapper{
+    .wrapper, .uaWrapper{
         border-bottom: 1px solid rgba($color: #FFFFFF, $alpha: 0.2);
         padding-left: $main-margin-left;
         padding-right: 170px;
@@ -143,6 +143,11 @@
                     }
                 }
             }
+        }
+    }
+    .uaWrapper{
+        h2{
+            font: normal normal 900 25px/35px var(--sans-black);
         }
     }
 }
