--- a/styles/Sidebar.module.scss
+++ b/styles/Sidebar.module.scss
@@ -19,6 +19,7 @@ $language-taxt-width: 98px;
     // }
     @media all and (max-width: 1215px){
         border: none;
+        height: auto;
     }
     @media all and (max-width: 1024px){
         width: auto;
