--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -5,19 +5,23 @@
 }
 
 .headerWrapper{
-    >.pathInner{
-        display: none;
+    .pathInner{
+        display: block;
         @media (max-width: 1350px) {
             display: block;
             color: white;
-            margin-left: $main-margin-left;
+            // margin-left: $main-margin-left;
+            margin-left: 20px;
+            font-size: 16px;
             border-top: 2px solid white;
-            margin-top: -30px;
-            max-width: 200px;
+            // margin-top: -30px;
+            // max-width: 200px;
+            min-width: 210px;
         }
         @media (max-width: 700px) {
             margin-left: 26px;
             margin-top: -20px;
+            font-size: 14px;
         }
     }
 }
@@ -235,12 +239,40 @@
     }
 }
 
+.languageNPath{ 
+    display: none;
+    margin-left: 50px;
+    // margin-top: -30px;
+    align-items: baseline;
+    @media (max-width: 1350px) {
+        display: flex;
+    }
+    @media (max-width: 1215px) {
+        display: flex;
+    }
+    @media (max-width: 700px) {
+        margin-left: 26px
+    }
+}
+
 @media(max-width: 700px){
 .logo{
         transform: scale(0.5);
         transform-origin: left center;
         width: 3rem;
         margin-left: 26px !important;
+    }
+}
+
+@media(max-width: 1350px){
+    .header{
+        border: none;
+    }
+}
+
+@media(max-width: 1215px){
+    .header{
+        border: none;
     }
 }
 
