--- a/styles/CennikChoices.module.scss
+++ b/styles/CennikChoices.module.scss
@@ -56,6 +56,8 @@
     // max-width: 400px;
     transition-duration: 0.3s;
     position: relative;
+    z-index: 0;
+    background-color: #ffffff;
     &:hover{
         border: 2px solid $main-color;
         transform: translateY(-15px);
