--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -235,6 +235,13 @@
 .blocksTwo{
   @include blocks(0px);
   padding-bottom: 103.5px;
+  margin-right: 160px;
+  @media (max-width: 1350px){
+      margin-right: 50px;
+  }
+  @media (max-width: 700px){
+    margin-right: 26px;
+}
   .blockText{
       padding-bottom: 60px;
       line-height: 25px;
